syntax = "proto3";

package metric.v1;

option go_package = "github.com/jbakhtin/rtagent/proto/metric/v1";

//import "buf/validate/validate.proto";

service MetricsService {
  // UpdateMetric - update metric by key.
  rpc UpdateMetric(UpdateMetricRequest) returns (UpdateMetricResponse);
}

message Metric {
  enum Type {
    TYPE_GAUGE_UNSPECIFIED = 0;
    TYPE_COUNTER = 1;
  }
  Type type = 1;
  string key = 2;
  uint64  delta  = 3;
  float value = 4;
  string hash = 5;
}

message UpdateMetricRequest {
  Metric metric = 1;
}

message UpdateMetricResponse {
  string error = 1;
}


